--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+html {
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    background-color: #142d4c;
+    color: #ececec;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+    text-align: center;
+    color: #385170;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search {
+    text-align: center;
+    margin: 0 auto;
+    max-width: 85%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid #385170;
+    border-radius: 4px;
+    background-color: #142d4c;
+    color: #9fd3c7;
+    max-width: 85%;
 }
 
-.App-link {
-  color: #61dafb;
+.current {
+    text-align: center;
+    background-color: #385170;
+    color: #9fd3c7;
+    border: 1px solid #ececec;
+    cursor: default;
+    padding: 6px 12px;
+    margin: 0 auto;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    max-width: 85%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tag {
+    text-align: center;
 }
